--- a/styles.css
+++ b/styles.css
@@ -18,12 +18,12 @@ canvas {
     background-color: black;
 }
 
-.controls {
+.controls, .direction-buttons {
     margin: 20px;
 }
 
 button {
-    padding: 10px 20px;
+    padding: 10px 15px;
     margin: 5px;
     font-size: 16px;
     border: none;
@@ -56,4 +56,9 @@ button:hover {
 .direction-buttons button {
     background-color: blue;
     color: white;
+}
+
+label {
+    font-size: 18px;
+    margin-right: 10px;
 }
